<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/film_poster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/film_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/film_poster"
            android:padding="15dp"
            android:text="@string/Rating"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:padding="15dp"
            android:text="@string/film_name"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/film_name"
            android:padding="15dp"
            android:text="@string/Date"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/release_date"
            android:padding="15dp"
            android:text="@string/Overview"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>